--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,11 @@
     <string name="help_text">
         Welcome to Little Plant Thoughts!
         \n
-        \n help coming soon...
+        \n Your plant wants to talk to you, and it can through this helpful app! Stick your sensor
+        in your plant\'s soil, close to a root, and check the screen for daily chapter updates.
+        \n
+        \n To play through a chapter, tap the chapter button to start, and tap the triangle button
+        to advance through the chapter. You can always play old chapters again.
         \n
         \n Made by The Strict Parents for PennApps XX.
     </string>
