--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
         to advance through the chapter. You can always play old chapters again.
         \n
         \n Made by The Strict Parents for PennApps XX.
+        \n All plant art drawn by Lepidopterane.
     </string>
 
 </resources>
